syntax = "proto3";

package shop.order.v1beta1;

option go_package = "github.com/demeero/shop-sandbox/proto/gen/go/shop/order/v1beta1";

import "shop/order/v1beta1/order.proto";

service OrderService {
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {}
}

message ListOrdersRequest {
  // The continuation token, which is used to page through large result sets.
  // To get the next page of results, set this parameter to the value of nextPageToken from the previous response.
  // Optional.
  int32 page_size = 1;

  // The maximum number of results returned by this request.
  // If page_size isn't provided, the server will decide the number of results to be returned.
  // Optional.
  string page_token = 2;
}

message ListOrdersResponse {
  // A token to retrieve next page of results.
  string next_page_token = 1;

  repeated Order orders = 2;
}